--- a/views/employees.pug
+++ b/views/employees.pug
@@ -13,10 +13,15 @@ html(lang="en")
             li 
                 a(href="/") home 
             li
-                a about 
+                a(href="/about") about 
             li 
-                a contact
+                a(href="/contact") contact
         //multiple line paragraph 
         p   
             | you are logged in as 
             | Student user 
+
+            - let employees = ["john", "jane", "jack", "joy", "jade", "jonah"]
+
+            each employee in employees
+                p= employee
